--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -370,10 +370,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(200px - 30px)
+        width: calc(200px)
     }
     .modal-content{
-        width: calc(200px - 30px)
+        width: calc(200px)
     }
 
 }
@@ -384,10 +384,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(250px - 30px)
+        width: calc(250px)
     }
     .modal-content{
-        width: calc(250px - 30px)
+        width: calc(250px)
     }
 
 }
@@ -398,10 +398,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(250px - 30px)
+        width: calc(250px)
     }
     .modal-content{
-        width: calc(250px - 30px)
+        width: calc(250px)
     }
 
 }
@@ -412,10 +412,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(280px - 30px)
+        width: calc(280px)
     }
     .modal-content{
-        width: calc(280px - 30px)
+        width: calc(280px)
     }
 
 }
@@ -427,10 +427,10 @@ body, .centratore {
         
     }
     .board-player{
-        width: calc(350px - 30px)
+        width: calc(350px)
     }
     .modal-content{
-        width: calc(350px - 30px)
+        width: calc(350px)
     }
     
 
@@ -442,10 +442,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(340px - 30px)
+        width: calc(340px)
     }
     .modal-content{
-        width: calc(340px - 30px)
+        width: calc(340px)
     }
 
 }
@@ -456,10 +456,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(390px - 30px)
+        width: calc(390px)
     }
     .modal-content{
-        width: calc(390px - 30px)
+        width: calc(390px)
     }
 
 }
@@ -470,10 +470,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(430px - 30px)
+        width: calc(430px)
     }
     .modal-content{
-        width: calc(430px - 30px)
+        width: calc(430px)
     }
 
 }
@@ -484,10 +484,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(470px - 30px)
+        width: calc(470px)
     }
     .modal-content{
-        width: calc(470px - 30px)
+        width: calc(470px)
     }
 
 }
@@ -498,10 +498,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(550px - 30px)
+        width: calc(550px)
     }
     .modal-content{
-        width: calc(550px - 30px)
+        width: calc(550px)
     }
 
 }
@@ -512,10 +512,10 @@ body, .centratore {
         /* height: 450px; */
     }
     .board-player{
-        width: calc(650px - 30px)
+        width: calc(650px)
     }
     .modal-content{
-        width: calc(650px - 30px)
+        width: calc(650px)
     }
 
 }
