--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -373,7 +373,8 @@ body, .centratore {
         width: calc(200px)
     }
     .modal-content{
-        width: calc(200px)
+        width: calc(200px);
+        height:258px;
     }
 
 }
@@ -387,7 +388,8 @@ body, .centratore {
         width: calc(225px)
     }
     .modal-content{
-        width: calc(225px)
+        width: calc(225px);
+        height:289px;
     }
 
 }
@@ -401,7 +403,8 @@ body, .centratore {
         width: calc(250px)
     }
     .modal-content{
-        width: calc(250px)
+        width: calc(250px);
+        height:321px;
     }
 
 }
@@ -415,7 +418,8 @@ body, .centratore {
         width: calc(280px)
     }
     .modal-content{
-        width: calc(280px)
+        width: calc(280px);
+        height:360px;
     }
 
 }
@@ -430,7 +434,8 @@ body, .centratore {
         width: calc(330px)
     }
     .modal-content{
-        width: calc(330px)
+        width: calc(330px);
+        height:424px;
     }
     
 
@@ -445,7 +450,8 @@ body, .centratore {
         width: calc(350px)
     }
     .modal-content{
-        width: calc(350px)
+        width: calc(350px);
+        height:450px;
     }
 
 }
@@ -459,7 +465,8 @@ body, .centratore {
         width: calc(390px)
     }
     .modal-content{
-        width: calc(390px)
+        width: calc(390px);
+        height:500px;
     }
 
 }
@@ -473,7 +480,8 @@ body, .centratore {
         width: calc(430px)
     }
     .modal-content{
-        width: calc(430px)
+        width: calc(430px);
+        height:552px;
     }
 
 }
@@ -487,7 +495,8 @@ body, .centratore {
         width: calc(470px)
     }
     .modal-content{
-        width: calc(470px)
+        width: calc(470px);
+        height:604px;
     }
 
 }
@@ -501,7 +510,8 @@ body, .centratore {
         width: calc(550px)
     }
     .modal-content{
-        width: calc(550px)
+        width: calc(550px);
+        height:707px;
     }
 
 }
@@ -515,7 +525,8 @@ body, .centratore {
         width: calc(650px)
     }
     .modal-content{
-        width: calc(650px)
+        width: calc(650px);
+        height:835px;
     }
 
 }
