--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -194,7 +194,7 @@ body, .centratore {
     text-decoration: none;
 }
 
-.bt i {
+.bt i , .bt span{
     color: white;
     font-size: 35px;
 }
@@ -283,13 +283,16 @@ body, .centratore {
 #page4 .record{
     width: 280px ;
     border:1px solid white;
+    margin-bottom:10px;
+    border-radius: 10px;
 }
+
 .refresh-button{
     width: 100%;
 }
 
 #scarabeo {
-    max-width: 600px;
+    max-width: 800px;
     margin-bottom: 15px;
 }
 
@@ -374,9 +377,21 @@ body, .centratore {
     }
     .modal-content{
         width: calc(200px);
-        height:258px;
+        height:358px;
     }
-
+    #console-screen{
+        width: 150px ;
+    }
+    .modal button {
+        width: 50px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 278px) and (min-height: 400px){
@@ -389,7 +404,20 @@ body, .centratore {
     }
     .modal-content{
         width: calc(225px);
-        height:289px;
+        height:389px;
+    }
+    #console-screen{
+        width: 100% ;
+    }
+    .modal button {
+        width: 50px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
     }
 
 }
@@ -404,7 +432,20 @@ body, .centratore {
     }
     .modal-content{
         width: calc(250px);
-        height:321px;
+        height:421px;
+    }
+    #console-screen{
+        width: 100% ;
+    }
+    .modal button {
+        width: 50px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
     }
 
 }
@@ -418,8 +459,21 @@ body, .centratore {
         width: calc(280px)
     }
     .modal-content{
-        width: calc(280px);
-        height:360px;
+        width: calc(260px);
+        height:460px;
+    }
+    #console-screen{
+        width: 200px ;
+    }
+    .modal button {
+        width: 90px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
     }
 
 }
@@ -434,8 +488,21 @@ body, .centratore {
         width: calc(330px)
     }
     .modal-content{
-        width: calc(330px);
-        height:424px;
+        width: calc(280px);
+        height:524px;
+    }
+    #console-screen{
+        width: 200px ;
+    }
+    .modal button {
+        width: 100px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
     }
     
 
@@ -450,10 +517,22 @@ body, .centratore {
         width: calc(350px)
     }
     .modal-content{
-        width: calc(350px);
-        height:450px;
+        width: calc(300px);
+        height:550px;
     }
-
+    #console-screen{
+        width: 240px ;
+    }
+    .modal button {
+        width: 110px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 638px) and (min-height: 670px){
@@ -465,10 +544,22 @@ body, .centratore {
         width: calc(390px)
     }
     .modal-content{
-        width: calc(390px);
-        height:500px;
+        width: calc(330px);
+        height:600px;
     }
-
+    #console-screen{
+        width: 280px ;
+    }
+    .modal button {
+        width: 130px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 5px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 662px) and (min-height: 726px){
@@ -480,10 +571,22 @@ body, .centratore {
         width: calc(430px)
     }
     .modal-content{
-        width: calc(430px);
-        height:552px;
+        width: calc(350px);
+        height:652px;
     }
-
+    #console-screen{
+        width: 290px ;
+    }
+    .modal button {
+        width: 140px;
+        min-height: 60px;
+        font-size: 10px;
+        margin: 7px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 700px) and (min-height: 790px){
@@ -495,8 +598,22 @@ body, .centratore {
         width: calc(470px)
     }
     .modal-content{
-        width: calc(470px);
-        height:604px;
+        width: calc(370px);
+        height:704px;
+    }
+
+    #console-screen{
+        width: 280px ;
+    }
+
+    .modal button {
+        width: 140px;
+        min-height: 60px;
+        margin: 10px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
     }
 
 }
@@ -510,10 +627,21 @@ body, .centratore {
         width: calc(550px)
     }
     .modal-content{
-        width: calc(550px);
-        height:707px;
+        width: calc(500px);
+        height:807px;
     }
-
+    #console-screen{
+        width: 350px ;
+    }
+    .modal button {
+        width: 170px;
+        min-height: 60px;
+        margin: 10px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 @media screen and (min-width: 795px) and (min-height: 1043px){
@@ -525,10 +653,21 @@ body, .centratore {
         width: calc(650px)
     }
     .modal-content{
-        width: calc(650px);
-        height:835px;
+        width: calc(600px);
+        height:935px;
     }
-
+    #console-screen{
+        width: 350px ;
+    }
+    .modal button {
+        width: 170px;
+        min-height: 60px;
+        margin: 10px;
+        color: white !important;
+        border : 1px solid white;
+        border-radius: 30px;
+        font-size: small;
+    }
 }
 
 /* ----------------------------------------------------------------------------- */
@@ -597,11 +736,7 @@ body, .centratore {
     }
 }
 
-#page4 .record{
-    margin-bottom:10px;
-    border: 2px solid white;
-    border-radius: 10px;
-}
+
 
 
 
@@ -642,20 +777,22 @@ body, .centratore {
  
 .modal img {width: 100px;}
 
-.modal button, #console-screen{
-    width: 200px;
+/* .modal button {
+    width: 170px;
     min-height: 60px;
-    /* border-radius: 20px; */
     margin: 10px;
     color: white !important;
     border : 2px solid white;
-    padding :19px;
     border-radius: 30px;
-}
+} */
 
 #console-screen{
-    border : 2px solid white;
+    border : 4px solid white;
     border-radius: 0px;
+    /* width: 350px; */
+    margin: 30px 30px 30px 30px;
+    padding-bottom: 40px;
+    margin-top: 10px;
 
 }
 
@@ -670,15 +807,14 @@ body, .centratore {
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-    rgba(0, 0, 0, 1), 
-    rgba(0, 0, 0, 1)
+    rgba(0, 0, 0, 0.7), 
+    rgba(0, 0, 0, 0.7)
     ),
-    url("images/wallpepars/grass2.jpeg");
+    /* url("images/wallpepars/grass2.jpeg") */;
     /* padding-top: 1rem; */
     /* animation: fade-in 0.6s; */
     /* font-family: 'VT323', monospace ; */
     /* font-size: 20px !important; */
-    
 }
 
 #myModalkoo6 {
@@ -701,7 +837,6 @@ body, .centratore {
 }
 
 .modal-content {
-
     background-color: black;
     /* box-shadow: 10px 10px purple; */
     border-radius: 30px;
@@ -710,7 +845,7 @@ body, .centratore {
     /* border: 8px solid BLACK; */
     /* width: 280px; */
     height: fit-content;
-    border: 5px solid #FCB341 ;
+    /* border: 5px solid #FCB341 ; */
 }
   
 #modalx div{
