--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11006,11 +11006,11 @@ body,
 
 /* ----------------------------------------------------------------------------- */
 
-#page1 {
-  display: flex;
+#page2 {
+  display: block;
 }
 
-#page2,
+#page1,
 #page3,
 #page4,
 #page5 {
@@ -11076,14 +11076,37 @@ body,
   background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0)), url(/images/water4.jpg?0a53390684384b5f43b5383cff54c9b4);
 }
 
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 100;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  height: 100vh;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/images/nilo.jpg?a7af08fedccdb689be60a2c03699c2cb);
+  background-repeat: repeat;
+  background-size: 100vh;
+  /* background-size: 100%; */
+  /* padding-top: 1rem; */
+  /* animation: fade-in 0.6s; */
+  /* font-family: 'VT323', monospace ; */
+  /* font-size: 20px !important; */
+}
+
 #page4 {
   background-color: black;
 }
 
 #page5 {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/jungle.jpg?fae7961d43318cc72ad47574982756ae);
+  background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0)), url(/images/nilo.jpg?a7af08fedccdb689be60a2c03699c2cb);
   background-repeat: repeat;
-  background-size: 100vh;
+  background-size: 100vw;
   min-height: 100vh;
   height: 100%;
   background-position: center;
@@ -11152,17 +11175,14 @@ body,
   text-decoration: none;
 }
 
-.bt span {
-  font-size: 10px;
-  padding: 5px;
-  color: black;
-  text-decoration: none;
-}
-
 .bt i,
 .bt span {
   color: white;
   font-size: 35px;
+}
+
+.bt span {
+  font-size: 25px;
 }
 
 .square {
@@ -11802,28 +11822,6 @@ body,
   margin: 30px 30px 30px 30px;
   padding-bottom: 40px;
   margin-top: 10px;
-}
-
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 100;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-  /* padding-top: 1rem; */
-  /* animation: fade-in 0.6s; */
-  /* font-family: 'VT323', monospace ; */
-  /* font-size: 20px !important; */
 }
 
 #myModalkoo6 {
