--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,10 +38,10 @@ body, .centratore {
 /* ------------------------- INITIAL DISPLAY PAGES ----------------------------- */
 /* ----------------------------------------------------------------------------- */
 
-#page1{
-    display: flex;
+#page2{
+    display: block;
 }
-#page2,
+#page1,
 #page3,
 #page4,
 #page5 {
@@ -110,6 +110,29 @@ body, .centratore {
     url("images/board/water4.jpg");
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 100; /* Sit on top */
+    left: 0;
+    top: 0;
+    height: 100vh; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.6), 
+      rgba(0, 0, 0, 0.6)
+    ), 
+    url("images/board/nilo.jpg") ; 
+    background-repeat: repeat ;
+    background-size: 100vh ;
+    /* background-size: 100%; */
+    /* padding-top: 1rem; */
+    /* animation: fade-in 0.6s; */
+    /* font-family: 'VT323', monospace ; */
+    /* font-size: 20px !important; */
+}
+
 #page4{
     background-color: black;
 }
@@ -120,9 +143,9 @@ body, .centratore {
       rgba(0, 0, 0, 1), 
       rgba(0, 0, 0, 1)
     ), 
-    url("images/wallpepars/jungle.jpg") ; 
+    url("images/board/nilo.jpg") ; 
     background-repeat: repeat ;
-    background-size: 100vh ;
+    background-size: 100vw ;
     min-height: 100vh ;
     height: 100% ;
     background-position: center ;
@@ -792,26 +815,7 @@ body, .centratore {
 
 }
 
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 100; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background:
-    linear-gradient(
-    rgba(0, 0, 0, 1), 
-    rgba(0, 0, 0, 1)
-    ),
-    /* url("images/wallpepars/grass2.jpeg") */;
-    /* padding-top: 1rem; */
-    /* animation: fade-in 0.6s; */
-    /* font-family: 'VT323', monospace ; */
-    /* font-size: 20px !important; */
-}
+
 
 #myModalkoo6 {
     display: none; /* Hidden by default */
