--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -120,10 +120,10 @@ body, .centratore {
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.6), 
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.3), 
+      rgba(0, 0, 0, 0.3)
     ), 
-    url("images/board/nilo.jpg") ; 
+    url("images/board/nilo2.jpg") ; 
     background-repeat: repeat ;
     background-size: 100vh ;
     /* background-size: 100%; */
