--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -116,21 +116,16 @@ body, .centratore {
     z-index: 100; /* Sit on top */
     left: 0;
     top: 0;
-    height: 100vh; /* Full height */
+    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.3), 
-      rgba(0, 0, 0, 0.3)
+      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4)
     ), 
-    url("images/board/nilo2.jpg") ; 
+    url("images/board/nilo10.jpg") ; 
     background-repeat: repeat ;
-    background-size: 100vh ;
-    /* background-size: 100%; */
-    /* padding-top: 1rem; */
-    /* animation: fade-in 0.6s; */
-    /* font-family: 'VT323', monospace ; */
-    /* font-size: 20px !important; */
+    background-size: 700px ;
 }
 
 #page4{
@@ -839,7 +834,7 @@ body, .centratore {
 .modal-content {
     background-color: black;
     /* box-shadow: 10px 10px purple; */
-    border-radius: 30px;
+    /* border-radius: 30px; */
     margin: 15% auto;
     padding: 20px;
     /* border: 8px solid BLACK; */
