--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -120,13 +120,16 @@ body, .centratore {
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.4), 
-      rgba(0, 0, 0, 0.4)
+      rgba(0, 0, 0, 0.1), 
+      rgba(0, 0, 0, 0.1)
     ), 
-    url("images/board/nilo10.jpg") ; 
+    /* url("images/board/nilo2.jpg") ; */
+    url("images/board/bignilo3.jpg") ; 
     background-repeat: repeat ;
-    background-size: 700px ;
+    background-size: 900px ;
 }
+
+
 
 #page4{
     background-color: black;
@@ -135,14 +138,12 @@ body, .centratore {
 #page5{
     background:
     linear-gradient(
-      rgba(0, 0, 0, 1), 
-      rgba(0, 0, 0, 1)
+      rgba(0, 0, 0, 0.1), 
+      rgba(0, 0, 0, 0.1)
     ), 
-    url("images/board/nilo.jpg") ; 
+    url("images/board/water4.jpg") ; 
     background-repeat: repeat ;
-    background-size: 100vw ;
-    min-height: 100vh ;
-    height: 100% ;
+    background-size: 700px ;
     background-position: center ;
 }
 
