--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -80,6 +80,20 @@ body, .centratore {
     background-position: top;
 } */
 
+
+
+  
+#modalx {
+    background: repeating-linear-gradient(to right, blue 0%, blue 12.5%, yellow 12.5%, yellow 25%, red 25%, red 37.5%, #EE5E81 37.5%, #EE5E81 50%, black 50%, black 62.5%, blue 62.5%, blue 75%, yellow 75%, yellow 87.5%, red 87.5%, red 100%), black;
+    background-size: 100% 10px, 50% 50%;
+    background-repeat: no-repeat;
+    rotate: 180deg;
+}
+
+#modalx span {
+    rotate: 180deg;
+}
+
 /* #page3{
     background:
     url("images/wallpepars/space.jpeg");     
@@ -118,15 +132,18 @@ body, .centratore {
     top: 0;
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
+
+
+
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.1), 
-      rgba(0, 0, 0, 0.1)
+      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4)
     ), 
     /* url("images/board/nilo2.jpg") ; */
     url("images/board/bignilo3.jpg") ; 
     background-repeat: repeat ;
-    background-size: 900px ;
+    background-size: 700px ;
 }
 
 
@@ -136,16 +153,21 @@ body, .centratore {
 }
 
 #page5{
+
+
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.1), 
-      rgba(0, 0, 0, 0.1)
+      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4)
     ), 
     url("images/board/water4.jpg") ; 
     background-repeat: repeat ;
-    background-size: 700px ;
+    background-size: 100vh ;
     background-position: center ;
 }
+
+
+
 
 /* ----------------------------------------------------------------------------- */
 /* --------------------------- UTILITY CONTAINERS ------------------------------ */
