--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -132,19 +132,27 @@ body, .centratore {
     top: 0;
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
+    background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4)
+    ); 
+    background-repeat: repeat ;
+    background-size: 700px ;
+}
 
-
-
+.modal-ingame{
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.4), 
       rgba(0, 0, 0, 0.4)
     ), 
-    /* url("images/board/nilo2.jpg") ; */
     url("images/board/bignilo3.jpg") ; 
     background-repeat: repeat ;
-    background-size: 700px ;
+    background-size: 100vw ;
 }
+
+
 
 
 
