--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -143,7 +143,7 @@ body, .centratore {
     ),
     url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
-    background-size: 100vw ;
+    /* background-size: 100vw ; */
 }
 
 
