--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -143,8 +143,9 @@ body, .centratore {
     ),
     url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
-    /* background-size: 100vw ; */
-    background-position: right  ;
+    background-size: 100vh ;
+    background-position: center ;
+    background-size: 600px ;
 }
 
 
