update css in master (can't see profile page on master 2.0)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,8 +15,8 @@ body,html {
     margin: 0px;
     background-color: black;
     /* overflow: hidden; */
-    font-family: 'Poppins', sans-serif;  
-    /* font-family: 'VT323', monospace ; */           
+    font-family: 'Poppins', sans-serif;
+    /* font-family: 'VT323', monospace ; */
 }
 
 .centratore{
@@ -25,7 +25,7 @@ body,html {
     margin: 0px;
     background-color: black;
     /* overflow: hidden; */
-    font-family: 'Poppins', sans-serif;   
+    font-family: 'Poppins', sans-serif;
 }
 
 body, .centratore {
@@ -41,12 +41,6 @@ body, .centratore {
 #page1{
     display: flex;
 }
-#page2,
-#page3,
-#page4,
-#page5 {
-    display: none;
-}
 
 /* ----------------------------------------------------------------------------- */
 /* ---------------------------- LAYOUT PAGES ----------------------------------- */
@@ -55,10 +49,10 @@ body, .centratore {
 /* #page1{
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.1), 
+      rgba(0, 0, 0, 0.1),
       rgba(0, 0, 0, 0.1)
     ),
-    url("images/wallpepars/sky.png"); 
+    url("images/wallpepars/sky.png");
     background-position:  bottom ;
     background-repeat: repeat;
     min-height: 100vh;
@@ -68,10 +62,10 @@ body, .centratore {
 /* #page2{
     background:
     linear-gradient(
-    rgba(0, 0, 0, 0.8), 
+    rgba(0, 0, 0, 0.8),
     rgba(0, 0, 0, 0.8)
     ),
-    url("images/board/water4.jpg"); 
+    url("images/board/water4.jpg");
     background-repeat: repeat;
     background-size: 100vw;
     min-height: 100vw;
@@ -82,7 +76,7 @@ body, .centratore {
 
 
 
-  
+
 #modalx {
     background: repeating-linear-gradient(to right, blue 0%, blue 12.5%, yellow 12.5%, yellow 25%, red 25%, red 37.5%, #EE5E81 37.5%, #EE5E81 50%, black 50%, black 62.5%, blue 62.5%, blue 75%, yellow 75%, yellow 87.5%, red 87.5%, red 100%), black;
     background-size: 100% 10px, 50% 50%;
@@ -94,31 +88,11 @@ body, .centratore {
     rotate: 180deg;
 }
 
-/* #page3{
-    background:
-    url("images/wallpepars/space.jpeg");     
-    background-repeat: repeat;
-    background-position: left;
-} */
-
-/* #page3{
-    background:
-    linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.7)
-    ), 
-    url("images/wallpepars/chess3.jpg") ; 
-    background-repeat: repeat ;
-    background-size: 100vh ;
-    min-height: 100vh ;
-    width: 100% ;
-    background-position: center  ;
-} */
 
 #page3{
     background:
     linear-gradient(
-    rgba(0, 0, 0, 1), 
+    rgba(0, 0, 0, 1),
     rgba(0, 0, 0, 1)
     ),
     url("images/board/water4.jpg");
@@ -134,9 +108,9 @@ body, .centratore {
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.4), 
-      rgba(0, 0, 0, 0.4)
-    ); 
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 1)
+    );
     background-repeat: repeat ;
     background-size: 700px ;
 }
@@ -144,12 +118,14 @@ body, .centratore {
 .modal-ingame{
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
-    ), 
-    url("images/board/bignilo3.jpg") ; 
+    ),
+    url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
-    background-size: 100vw ;
+    background-size: 100vh ;
+    background-position: center ;
+    background-size: 600px ;
 }
 
 
@@ -165,13 +141,14 @@ body, .centratore {
 
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
-    ), 
-    url("images/board/water4.jpg") ; 
+    ),
+    url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
     background-size: 100vh ;
     background-position: center ;
+    background-size: 600px ;
 }
 
 
@@ -209,7 +186,7 @@ body, .centratore {
     text-align: center;
     height: 80vh;
 } */
-    
+
 /* ----------------------------------------------------------------------------- */
 /* -------------------------- MENU PAGE BUTTONS -------------------------------- */
 /* ----------------------------------------------------------------------------- */
@@ -217,7 +194,7 @@ body, .centratore {
 
 .bt {
     z-index: 2;
-    
+
     display: flex;
     bottom: 55px;
     flex-direction: row;
@@ -293,12 +270,12 @@ body, .centratore {
 /* ----------------------------------------------------------------------------- */
 /* ------------------------ PAGE 2 RANK UTILITY -------------------------------- */
 /* ----------------------------------------------------------------------------- */
-    
+
 .fa-bars{
     color: white;
     margin-top: 25px;
     margin-left: 10px;
-    position: absolute;   
+    position: absolute;
     font-size: 27px;
 }
 
@@ -374,7 +351,7 @@ body, .centratore {
 
 .banner-board-helper{
     justify-content: center;
-} 
+}
 
 @media screen and (max-width: 899px) {
     #scarabeo {
@@ -533,7 +510,7 @@ body, .centratore {
     .board{
         width: 330px;
         /* height: 450px; */
-        
+
     }
     .board-player{
         width: calc(330px)
@@ -555,7 +532,7 @@ body, .centratore {
         border-radius: 30px;
         font-size: small;
     }
-    
+
 
 }
 
@@ -637,9 +614,6 @@ body, .centratore {
         border : 1px solid white;
         border-radius: 30px;
         font-size: small;
-    }
-    .modal-ingame{
-        background-size: 500px ;
     }
 }
 
@@ -797,7 +771,7 @@ body, .centratore {
         background-color: #EDEB51;
         background-color: #EE5E81; */
         position: relative;
-    } 
+    }
     #page4 .record {
         width: 280px ;
     }
@@ -819,6 +793,12 @@ body, .centratore {
 
 .pepar{
     margin-top: 40px !important;
+    background-color:black;
+    background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
+    )
 }
 
 @media screen and (min-width: 350px) and (min-height: 550px){
@@ -845,7 +825,7 @@ body, .centratore {
 /* ----------------------------------------------------------------------------- */
 /* --------------------------- UTILITY MODALS ---------------------------------- */
 /* ----------------------------------------------------------------------------- */
- 
+
 .modal img {width: 100px;}
 
 /* .modal button {
@@ -899,7 +879,7 @@ body, .centratore {
     height: fit-content;
     /* border: 5px solid #FCB341 ; */
 }
-  
+
 #modalx div{
     background-color: black;
 }
@@ -963,7 +943,7 @@ body, .centratore {
     font-size: 28px;
     font-weight: bold;
 }
-  
+
 .close:hover,
 .close:focus {
     color: black;
@@ -980,7 +960,7 @@ body, .centratore {
 }
 
 .closekoo ,
-.closekoo2 , 
+.closekoo2 ,
 .closekoo3 ,
 .closekoo4 {
     /* color: #aaa; */
@@ -990,11 +970,11 @@ body, .centratore {
 }
 
 .closekoo:hover ,
-.closekoo2:hover , 
+.closekoo2:hover ,
 .closekoo3:hover ,
 .closekoo4:hover ,
 .closekoo:focus,
-.closekoo2:focus, 
+.closekoo2:focus,
 .closekoo3:focus,
 .closekoo4:focus
 {
