--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10984,14 +10984,12 @@ body,
 /* #page1{
     background:
     linear-gradient(
-      rgba(0, 0, 0, 0.1),
-      rgba(0, 0, 0, 0.1)
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
     ),
-    url("images/wallpepars/sky.png");
-    background-position:  bottom ;
+    url("images/wallpepars/jungle.jpg");
     background-repeat: repeat;
-    min-height: 100vh;
-    background-size: cover;
+    background-size: 300px;
 } */
 
 /* #page2{
